@@ -1,3 +1,10 @@
+2004-05-13  Per Bothner  <per@bothner.com>
+
+	* ClassType.java (getFields, getDeclaredMethods):  Make synchronized.
+	(getDeclaredField):  Use getFields.
+	(getDeclaredMethod [2 overloads]):  Use getDeclaredMethods.
+	Fixes Savannah bug #8817.
+
 2004-02-20  Per Bothner  <per@bothner.com>
 
 	* CodeAttr.java (emitTryEnd):  Don't emitStore if ! reachableHere().
